/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.dac.proto.model.job;

import "../../../../../services/jobs/src/main/protobuf/job.proto";
import "../../../../../sabot/kernel/src/main/protobuf/attempts.proto";


option java_package = "com.dremio.dac.proto.model.job";
option optimize_for = SPEED;

option java_outer_classname = "JobProtobuf";

message JobAttemptUI {
  optional JobState state = 1;
  optional JobInfo info = 2;
  optional JobStats stats = 3;
  optional JobDetails details = 4;
  optional AttemptReason reason = 5;
  optional string attemptId = 6;
  optional exec.NodeEndpoint endpoint = 7;
}
