/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package exec.bit.coord;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "CoordRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

import "UserBitShared.proto";


/* Describes communication between coordinators. */
enum RpcType {
  ACK = 1;
  
  REQ_QUERY_CANCEL = 2;
  REQ_QUERY_PROFILE = 3;
  RESP_QUERY_PROFILE = 4;
}

message JobCancelRequest {
  required exec.shared.ExternalId external_Id = 1;
  optional string cancel_reason = 2;
}
